@@ -4,7 +4,7 @@ Title: Vectorised Tools for URL Handling and Parsing
 Version: 1.7.0
 Date: 2017-08-29
 Author: Oliver Keyes [aut, cre], Jay Jacobs [aut, cre], Drew Schmidt [aut],
-    Mark Greenaway [ctb], Bob Rudis [ctb], Alex Pinto [ctb], Maryam Khezrzadeh [ctb], 
+    Mark Greenaway [ctb], Bob Rudis [ctb], Alex Pinto [ctb], Maryam Khezrzadeh [ctb], Peter Meilstrup [ctb],
     Adam M. Costello [cph], Jeff Bezanson [cph]
 Maintainer: Oliver Keyes <ironholds@gmail.com>
 Description: A toolkit for all URL-handling needs, including encoding and decoding,
